--- a/notebooks/ar_seasonal_trends.Rmd
+++ b/notebooks/ar_seasonal_trends.Rmd
@@ -349,10 +349,10 @@ p <- jobs |>
 
 ggplotly(p, tooltip = "text")
 ```
-
+### Number of jobs by month of due date
 ```{r}
 #| code-fold: true
-jobs |>
+p <- jobs |>
   filter(customer_id %in% top20_customers_total$customer_id) |>
   mutate(
     month = month(production_due_date),
@@ -380,6 +380,8 @@ jobs |>
   theme(
     axis.text.x = element_text(angle = 45, hjust = 1)
   )
+
+ggplotly(p, tooltip = "text")
 ```
 
 
